
  HCAT-253 HBase revision manager should configure/drop znodes in the create/drop table meta hooks in the storage handler. (avandana via toffer)

  HCAT-259 Make readFields() and write() in LazyHCatRecord work (gates via khorgath)

  HCAT-194. Better error messages for HCatalog access control errors (julienledem via hashutosh)  
  
  OPTIMIZATIONS

  BUG FIXES
  HCAT-386 e2e tests should respect JAVA_HOME when it's set (gates)

  HCAT-363 HCat leaks metastore connection (rohini via toffer)

  HCAT-314 HCatOutputFormat.setOutput is called more than once by HCatStorer (avandana via toffer)

  HCAT-378 Found a few source files missing Apache headers (gates)

  HCAT-377 Recent changes broke releaseaudit target (gates)

  HCAT-367 Pig writes data but partition information isn't getting updated (rohini via gates)

  HCAT-365 HCatUtil.getStorageHandler should set the configuration (traviscrawford via gates)

  HCAT-371 A few javadoc warnings have crept into HCat (gates)

  HCAT-320 Remove filtering of table properties which are not prefix with "hcat." (rohini via gates)

  HCAT-354 hive-hbase-handler jar not getting put in hcat package (gates)

  HCAT-348 HCatUtil::getHiveConf(Configuration) ignores passed-in conf while creating HiveConf (gates)

  HCAT-312 Hcatalog rpms change the ownership of /usr/lib64 to hcat user (gkesavan via gates)

  HCAT-301 Reading from a table created with upper case table name throws error. (rohini via toffer)

  HCAT-319 Cleanup of 0.3 mapred classes (khorgath via gates)

  HCAT-302 unable to write to hbase channel. HBaseHCatStorageHandler class not found (rohini via gates)

  HCAT-338 A couple of typos in the 0.4.0 document (gates)

  HCAT-335 Release notes issues for 0.4 (gates)

  HCAT-291 Pig and MR fail to write to a sequence file (avandana via gates)

  HCAT-305 hcat shell is not properly picking up the hcat jar (gates)

  HCAT-307 NOTICE and LICENSE file need updated to add new jars and move copyright date to 2012 (gates)
